--- a/front/src/app/component/navbar/navbar.component.css
+++ b/front/src/app/component/navbar/navbar.component.css
@@ -1,34 +1,40 @@
 /* Navbar styles */
-
 .navbar {
   padding: 0 70px;
-  /* background-color: #32373d; */
-  /* color: var(--main-color); */
   font-size: 18px;
-
+  background-color: var(--light-bg-color);
 }
-.logo{
+
+.dark-mode .navbar {
+  background-color: #191c24;
+}
+
+.logo {
   cursor: pointer;
 }
-.logo img{
+
+.logo img {
   width: 40%;
 }
 
 /* Search */
-li{
+li {
   cursor: pointer;
 }
-.search-bar{
+
+.search-bar {
   position: relative;
 }
+
 .search-bar input {
-  width: 500px; 
+  width: 500px;
   padding: 10px 10px;
-  border : none;
+  border: none;
   outline: none;
   background-color: #EEE;
 }
-.search-bar i{
+
+.search-bar i {
   position: absolute;
   top: 47%;
   right: 3%;
@@ -37,13 +43,14 @@ li{
   transform: translateY(-50%);
 }
 
-.search-bar input:focus, .search-bar textarea:focus {
+.search-bar input:focus,
+.search-bar textarea:focus {
   border-color: var(--main-color);
   box-shadow: 0 0 10px 3px var(--main-color);
 }
 
 /* links */
-.links .navbar-nav{
+.links .navbar-nav {
   gap: 30px;
 }
 
@@ -53,7 +60,10 @@ li{
   align-items: center;
   font-size: 18px;
   color: var(--main-color);
-  /* color: var(--primary-text-color); */
+}
+
+.dark-mode .links .navbar-nav .nav-item a {
+  color: white;
 }
 
 .nav-links i {
@@ -61,7 +71,7 @@ li{
   color: var(--main-color);
 }
 
-.nav-links a p{
+.nav-links a p {
   margin-top: 4px;
   color: var(--main-color);
   font-weight: bold;
@@ -73,13 +83,8 @@ li{
   color: var(--btn-color) !important;
 }
 
-.links a p{
-  margin-top: 6px;
-}
-
-
 /* Login Style */
-.modal-header{
+.modal-header {
   border-bottom: none;
 }
 
@@ -106,34 +111,29 @@ li{
   cursor: pointer;
 }
 
-
 /* Responsive */
 @media (max-width: 1255px) {
   .navbar {
     padding: 10px 20px;
   }
-  .logo img{
+
+  .logo img {
     width: 80%;
   }
-  .navbar-toggler{
+
+  .navbar-toggler {
     border: none;
     position: absolute;
     width: fit-content;
     right: 3%;
   }
-  .links .navbar-nav{
-    gap: 0;
+
+  .links .navbar-nav {
+    justify-content: flex-end;
+    gap: 20px;
   }
-}
-@media (max-width: 575px) {
-  .logo img{
-      width: 100%;
-  }
-  .navbar-toggler{
-    margin: auto;
-    margin-bottom: 10px;
-  }
-  .search{
-    margin-bottom: 10px;
+
+  .search-bar input {
+    width: 100%;
   }
 }
