--- a/front/src/app/component/home/home.component.html
+++ b/front/src/app/component/home/home.component.html
@@ -142,7 +142,7 @@
 <!-- users -->
 <section class="user">
     <div class="container" style="background-color: #395963;">
-        <div class="row p-4 align-items-center">
+        <div class="row p-4 align-items-center mydailyrecipes" >
             <div class="borderSection">
                 <!-- Image Section -->
                 <div class="col-lg-3 col-md-4 col-12 mb-3 mb-md-0 userImg">
