--- a/front/src/app/component/recipes/recipes.component.html
+++ b/front/src/app/component/recipes/recipes.component.html
@@ -1,5 +1,5 @@
 <section class="mt-5">
-    <h1 class="text-center" style="color: var(--main-color);">All Recipes</h1>
+    <h1 class="text-center all-recipes-title"  style="color: var(--main-color);">All Recipes</h1>
 </section>
 <section class="mt-3 mb-3  category">
   <div class="row d-flex justify-content-center align-items-center smaller-div">
