edited sticky navbar onlywhen scrolling up

--- a/front/src/app/component/navbar/navbar.component.css
+++ b/front/src/app/component/navbar/navbar.component.css
@@ -1,16 +1,19 @@
 /* Navbar styles */
 
 .navbar {
-  /* background-color: #32373d; */
-  /* color: var(--main-color); */
-  font-size: 18px;
   transition: background-color 0.3s ease, padding 0.3s ease;
   padding: 0 70px; 
   background-color: white;
-  transition: .3s ease all;
+  transition: .3s all ease;
+  position: relative;
 }
 .navbar.scrolled {
+  position: sticky;
+  width: 100%;
+  top: 0;
+  z-index: 1000;
   box-shadow: 0 0 10px 10px #ddd;
+  transform: translateY(-7px); /* Smooth transition effect */
 }
 
 .logo{
