--- a/front/src/app/component/navbar/navbar.component.html
+++ b/front/src/app/component/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-xl sticky-top"  [ngClass]="{'scrolled': isScrolled}">
+<nav class="navbar navbar-expand-xl"  [ngClass]="{'scrolled': isScrolledUp}">
   <div class="container-fluid">
     <div class="row w-100 align-items-center justify-content-between">
       
