--- a/front/src/app/component/recipes/recipes.component.html
+++ b/front/src/app/component/recipes/recipes.component.html
@@ -1,4 +1,4 @@
-<section class="mt-5">
+<section class="mt-5 w-100">
     <h1 class="text-center" style="color: var(--main-color);">All Recipes</h1>
 </section>
 <section class="mt-3 mb-3  category">
