--- a/front/src/app/component/single-recipe/single-recipe.component.css
+++ b/front/src/app/component/single-recipe/single-recipe.component.css
@@ -176,7 +176,7 @@ p {
   font-family: var(--main-font);
   color: var(--main-color);
   font-size: 32px;
-  font-weight: 800;
+  font-weight: 800 !important;
 }
 
 .related-recipes .card-title {
