--- a/front/src/app/component/profile/profile.component.html
+++ b/front/src/app/component/profile/profile.component.html
@@ -2,14 +2,39 @@
 
 <div class="container my-5">
   <section class="user-details d-flex justify-content-between align-items-center">
-    <h1 class="text-capitalize"><span class="fw-bold text-capitalize">hello</span> {{ user?.name }}</h1>
+    <h1 class="text-capitalize fw-bold" style="color: var(--main-color);"><img src="assets/img/chef.png" alt="chef" class="chef"> {{ user?.name }}</h1>
     <a  data-bs-toggle="modal" data-bs-target="#Edit" style="color: var(--main-color); font-size: 24px;"><i class="fa fa-cog" aria-hidden="true"></i></a>
   </section>
+  
+  <section class="mt-5">
+    <div class="title d-flex justify-content-between align-items-center">
+      <h1 class="fw-bold text-capitalize"><img src="assets/img/link.png" alt="link" class="chef">Links</h1>
+      <a  data-bs-toggle="modal" data-bs-target="#Socials" style="color: var(--main-color); font-size: 24px;"><i class="fa fa-cog" aria-hidden="true"></i>
+      </a>
+    </div>
+    <div class="row d-flex justify-content-center flex-column align-items-center" *ngIf="!user.youtube_link && !user.instagram_link && !user.tiktok_link" >
+      <div class="p-3">
+        <h3 class="text-center text-secondary ">Add Social links to spread your Magic !!</h3>
+      </div>
+    </div>
+    <div class="d-flex ">
+      <div *ngIf="user.youtube_link" class="me-5 shadow-sm p-3 rounded">
+        <a [href]="user.youtube_link"><img src="assets/img/youtube.png" alt="youtube" class="link-img">Youtube Link</a>
+      </div>
+      <div *ngIf="user.instagram_link" class="me-5 shadow-sm p-3 rounded">
+        <a [href]="user.instagram_link"><img src="assets/img/instagram.png" alt="instagram" class="link-img">Instagram Link</a>
+      </div>
+      <div *ngIf="user.tiktok_link" class="me-5 shadow-sm p-3 rounded">
+        <a [href]="user.tiktok_link"><img src="assets/img/tiktok.png" alt="tiktok" class="link-img">TikTok Link</a>
+      </div>
+    </div>
+  </section>
+  
   <section class="recipes-wrapper mt-5">
     <div class="title">
-      <h1 class="fw-bold text-capitalize">your favorite recipes</h1>
+      <h1 class="fw-bold text-capitalize"><img src="assets/img/heart.png" alt="chef" class="chef">your favorite recipes</h1>
     </div>
-    <div class="body mt-4 d-flex gap-3 overflow-x-auto"  *ngIf="user.recipes_saves.length > 0">
+    <div class="body mt-4 d-flex gap-3 overflow-x-auto"  *ngIf="user?.recipes_saves.length > 0">
 
       <div *ngFor="let recipe of user?.recipes_saves">
         <div
@@ -36,10 +61,11 @@
       </div>
     </div>
   </section>
+
   <!-- premium ========================================================================================= -->
   <section class="recipes-wrapper mt-5" *ngIf="isPremium">
     <div class="title d-flex justify-content-between align-items-center">
-      <h1 class="fw-bold text-capitalize">Waiting for Aproval</h1>
+      <h1 class="fw-bold text-capitalize"><img src="assets/img/sand.png" alt="chef" class="chef">Waiting for Aproval</h1>
       
     </div>
     <div class="body mt-4 d-flex gap-3 overflow-x-auto" *ngIf="user.pending_recipes.length!=0">
@@ -80,7 +106,7 @@
   </section>
   <section class="recipes-wrapper mt-5" *ngIf="isPremium">
     <div class="title d-flex justify-content-between align-items-center">
-      <h1 class="fw-bold text-capitalize">your magic</h1>
+      <h1 class="fw-bold text-capitalize"><img src="assets/img/magic.png" alt="chef" class="chef">your magic</h1>
       <a routerLink="/add-recipe/{{ user.id }}" class="text-capitalize text-bold text-decoration-none btn btn-dark btn-sm px-lg-3 py-lg-2">add recipe</a>
     </div>
     <div class="body mt-4 d-flex gap-3 overflow-x-auto" *ngIf="user.recipes.length!=0">
@@ -148,6 +174,19 @@
       </div>
       <div class="modal-body">
         <app-edit-profile></app-edit-profile>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="modal fade" id="Socials" tabindex="-1" aria-labelledby="Socials" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered">
+    <div class="modal-content">
+      <div class="modal-header">
+        
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <app-socials ></app-socials>
       </div>
     </div>
   </div>
