--- a/front/src/app/component/recipes/recipes.component.css
+++ b/front/src/app/component/recipes/recipes.component.css
@@ -110,7 +110,9 @@ h5{
     justify-content: center;
 }
 
-
+.smaller-div{
+    width: 100%;
+}
 
 @media screen and (max-width: 450px) {
     .media{
@@ -121,7 +123,7 @@ h5{
 @media (min-width: 981px) and (max-width: 1500px) {
     .small-div {
         width: 15%;
-        margin: 1%;
+        
     }
     .smaller-div{
         width: 100%;
@@ -144,7 +146,7 @@ h5{
 }
 @media screen and (max-width: 760px) {
     .img-fluid{
-        width: 25%;
+        width: 50px;
     }
     .color{
         font-size: 80% !important;
@@ -154,7 +156,7 @@ h5{
     }
     .smaller-div ,.sm-div{
         
-        width: 50%;
+        
         margin: auto;
        
  
@@ -163,7 +165,7 @@ h5{
 @media screen and (max-width: 670px) {
     .smaller-div,.sm-div{
        
-       width: 80%;
+       
        margin: auto;
       
 
