--- a/front/src/app/component/recipes/recipes.component.html
+++ b/front/src/app/component/recipes/recipes.component.html
@@ -3,21 +3,21 @@
 </section>
 <section class="mt-3 mb-3  category">
   <div class="row d-flex justify-content-center align-items-center smaller-div">
-      <div class="col-lg-1 p-3 col-md-6 col-sm-10 background   mx-3 small-div d-flex flex-column justify-content-center align-items-center" (click)="toggleCategory('breakfast')" [class.selected]="isCategorySelected('breakfast')"  >
+      <div class="col-lg-1 p-3 col-md-2 col-sm-4 col-9 background   ms-3 small-div d-flex flex-column justify-content-center align-items-center" (click)="toggleCategory('breakfast')" [class.selected]="isCategorySelected('breakfast')"  >
 
           <img src="assets/img/croissant.png" alt="Breakfast" class="img-fluid">
           <p href="#" class="text-decoration-none fs-5 color p-1 m-1 align-middle">Breakfast</p>
       </div>
-      <div class="col-lg-1 col-md-6 p-3   col-sm-10 background   mx-3 small-div d-flex flex-column justify-content-center align-items-center" (click)="toggleCategory('lunch')" [class.selected]="isCategorySelected('lunch')" >
+      <div class="col-lg-1 col-md-2 p-3   col-sm-4 col-9 background   ms-3 small-div d-flex flex-column justify-content-center align-items-center" (click)="toggleCategory('lunch')" [class.selected]="isCategorySelected('lunch')" >
           <img src="assets/img/salad.png" alt="Lunch" class="img-fluid">
           <p href="#" class="text-decoration-none fs-5 color p-1 m-1 align-middle">Lunch</p>
       </div>
-      <div class="col-lg-1 col-md-6 p-3  col-sm-10 background   mx-3 small-div d-flex flex-column justify-content-center align-items-center" (click)="toggleCategory('dinner')" [class.selected]="isCategorySelected('dinner')"  >
+      <div class="col-lg-1 col-md-2 p-3 col-sm-4 col-9 background   ms-3 small-div d-flex flex-column justify-content-center align-items-center" (click)="toggleCategory('dinner')" [class.selected]="isCategorySelected('dinner')"  >
 
           <img src="assets/img/dinner.png" alt="Dinner" class="img-fluid">
           <p href="#" class="text-decoration-none fs-5 color p-1 m-1 align-middle">Dinner</p>
       </div>
-      <div class="col-lg-1 col-md-6 p-3  col-sm-10 background   mx-3 small-div d-flex flex-column justify-content-center align-items-center" (click)="toggleCategory('dessert')" [class.selected]="isCategorySelected('dessert')"  >
+      <div class="col-lg-1 col-md-2 p-3  col-sm-4 col-9 background   ms-3 small-div d-flex flex-column justify-content-center align-items-center" (click)="toggleCategory('dessert')" [class.selected]="isCategorySelected('dessert')"  >
 
         <img src="assets/img/cupcake.png" alt="Dinner" class="img-fluid">
         <p href="#" class="text-decoration-none fs-5 color p-1 m-1 align-middle">Dessert</p>
@@ -26,7 +26,7 @@
 </section>
 <section >
     <div class="d-flex justify-content-center sm-div sub_category m-auto row">
-        <div class="col-lg-2 col-md-3 col-sm-10  sm-div m-1">
+        <div class="col-lg-2 col-md-3 col-sm-10  sm-div mt-2 ">
             <div class="dropdown d-flex flex-column" >
                 <button (click)="toggleDropdown()" class="btn pink-btn  d-block ">SubCategory 
                     <img src="assets/img/filter-svgrepo-com.svg" alt="" class="d-inline-block" >
@@ -37,7 +37,7 @@
               
             
         </div>
-        <div class=" col-lg-2 col-md-3 col-sm-10  sm-div  m-1">
+        <div class=" col-lg-2 col-md-3 col-sm-10  sm-div mt-2 ">
             <div class="dropdown d-flex flex-column">
                 <button (click)="toggleDropdown2()" class="btn pink-btn">Ingredients
                     <img src="assets/img/filter-svgrepo-com.svg" alt="" class="d-inline-block">
@@ -47,7 +47,7 @@
               
               
         </div>
-        <div class=" col-lg-2 col-md-3 col-sm-10  sm-div m-1">
+        <div class=" col-lg-2 col-md-3 col-sm-10  sm-div mt-2">
             <div class="dropdown d-flex flex-column">
                 <button (click)="toggleDropdown3()" class="btn pink-btn  d-block">Time
                     <img src="assets/img/clock-two-svgrepo-com.svg" alt="" class="d-inline-block">
