change icons in navbar

--- a/front/src/app/component/navbar/navbar.component.css
+++ b/front/src/app/component/navbar/navbar.component.css
@@ -43,6 +43,13 @@ li{
 }
 
 /* links */
+.chef{
+  width: 50px;
+  padding-bottom: 10px;
+  padding-right: 10px;
+
+}
+
 .links .navbar-nav{
   gap: 30px;
 }
