changing navbar icons

--- a/front/src/app/component/navbar/navbar.component.html
+++ b/front/src/app/component/navbar/navbar.component.html
@@ -36,28 +36,28 @@
 
             <li class="nav-item">
               <a class="nav-link" routerLinkActive="active" routerLink="/recipes" [queryParams]="{ reverse: 'true' }" [ngStyle]="{ color: darkMode == true? 'white' : 'var(--main-color)'}">
-                <img src="assets/img/recipes.png" alt="home" class="chef">
+                <img src="assets/img/recipes.png" alt="recipes" class="chef">
                 <p>Recipes</p>
               </a>
             </li>
 
             <li class="nav-item">
               <a class="nav-link" routerLinkActive="active" routerLink="/about" [ngStyle]="{ color: darkMode == true? 'white' : 'var(--main-color)'}">
-                <i class="fa-solid fa-people-group"></i>
+                <img src="assets/img/about.png" alt="about" class="chef">
                 <p>About</p>
               </a>
             </li>
 
             <li class="nav-item" *ngIf="isLogged && !admin">
               <a class="nav-link" routerLinkActive="active" routerLink="/profile" [ngStyle]="{ color: darkMode == true? 'white' : 'var(--main-color)'}">
-                <i class="fa-solid fa-user"></i>
+                <img src="assets/img/chef.png" alt="person" class="chef">
                 <p>Profile</p>
               </a>
             </li>
 
             <li class="nav-item" *ngIf="isLogged && admin">
               <a class="nav-link" routerLinkActive="active" routerLink="/admin" [ngStyle]="{ color: darkMode == true? 'white' : 'var(--main-color)'}">
-                <i class="fa-solid fa-user"></i>
+                <img src="assets/img/chef.png" alt="person" class="chef">
                 <p>Admin</p>
               </a>
             </li>
@@ -65,7 +65,7 @@
             <!-- Login -->
             <li class="nav-item" *ngIf="!isLogged">
               <a class="nav-link" data-bs-toggle="modal" data-bs-target="#loginModal" [ngStyle]="{ color: darkMode == true? 'white' : 'var(--main-color)'}">
-                <i class="fa-solid fa-right-to-bracket"></i>
+                <img src="assets/img/login.png" alt="login" class="chef">
                 <p>Login</p>
               </a>
             </li>
@@ -73,7 +73,7 @@
             <!-- Logout -->
             <li class="nav-item" *ngIf="isLogged">
               <a class="nav-link" (click)="logout()" [ngStyle]="{ color: darkMode == true? 'white' : 'var(--main-color)'}">
-                <i class="fa-solid fa-right-from-bracket"></i>
+                <img src="assets/img/logout.png" alt="logout" class="chef">
                 <p>Logout</p>
               </a>
             </li>
@@ -81,7 +81,8 @@
             <!-- DarkMode -->
             <li class="nav-item" id="darkMode" (click)="toggleDarkMode()">
               <a class="nav-link" [ngStyle]="{ color: darkMode == true? 'white' : 'var(--main-color)'}">
-                <i class="fa-solid" [ngClass]="{'fa-sun-o': darkMode, 'fa-moon-o': !darkMode}"></i>
+                <img src="assets/img/dark.png" alt="dark" class="chef" *ngIf="!darkMode" >
+                <img src="assets/img/light.png" alt="dark" class="chef" *ngIf="darkMode">
                 <p *ngIf="darkMode">Light</p>
                 <p *ngIf="!darkMode">Dark</p>
               </a>
