--- a/front/src/styles.css
+++ b/front/src/styles.css
@@ -10,7 +10,7 @@
   --third-color: #eee;
 
   --boxCategory-color: #F6E1D3;
-  --  -color: #fe735c; 
+  --btn-color: #fe735c; 
 
   --boxShadow-color: rgba(244, 47, 44, 0.32);
 
