change link style of profile

--- a/front/src/app/component/home/home.component.css
+++ b/front/src/app/component/home/home.component.css
@@ -237,7 +237,8 @@ body{
     padding: 6px 25px;
     position: absolute;
     bottom: -5%;
-    left: 33%;
+    left: 50%;
+    transform: translateX(-50%);
 }
 
 .box .categoryName h5{
