--- a/front/src/app/component/profile/profile.component.css
+++ b/front/src/app/component/profile/profile.component.css
@@ -79,7 +79,15 @@
   padding-right: 10px;
 
 }
-
+.links{
+  color: rgb(109 118 126);
+  text-decoration: none;
+  font-weight: 500;
+}
+.links:hover{
+  color: var(--btn-color);
+  text-decoration: underline;
+}
 @media (max-width: 1024px) {
   .ad-banner h1 {
       font-size: 35px;
