--- a/front/src/app/component/profile/profile.component.html
+++ b/front/src/app/component/profile/profile.component.html
@@ -19,13 +19,13 @@
     </div>
     <div class="d-flex ">
       <div *ngIf="user.youtube_link" class="me-5 shadow-sm p-3 rounded">
-        <a [href]="user.youtube_link"><img src="assets/img/youtube.png" alt="youtube" class="link-img">Youtube Link</a>
+        <a [href]="user.youtube_link" class="links "><img src="assets/img/youtube.png" alt="youtube" class="link-img">Youtube Link</a>
       </div>
       <div *ngIf="user.instagram_link" class="me-5 shadow-sm p-3 rounded">
-        <a [href]="user.instagram_link"><img src="assets/img/instagram.png" alt="instagram" class="link-img">Instagram Link</a>
+        <a [href]="user.instagram_link" class="links "><img src="assets/img/instagram.png" alt="instagram" class="link-img">Instagram Link</a>
       </div>
       <div *ngIf="user.tiktok_link" class="me-5 shadow-sm p-3 rounded">
-        <a [href]="user.tiktok_link"><img src="assets/img/tiktok.png" alt="tiktok" class="link-img">TikTok Link</a>
+        <a [href]="user.tiktok_link" class="links "><img src="assets/img/tiktok.png" alt="tiktok" class="link-img">TikTok Link</a>
       </div>
     </div>
   </section>
