--- a/front/src/app/component/home/home.component.css
+++ b/front/src/app/component/home/home.component.css
@@ -361,17 +361,17 @@ body{
     text-decoration: none;
 }
 
-.latestContent h5{
-    font-family: var(--titleReciepe-font);
-    font-weight: 600;
+.latestContent h4{
     font-size: 22px;
     color: var(--main-color);
+    font-family: var(--main-font);
+    font-weight: 600;
 }
 .latestContent p{
-    font-family: var(--third-font);
-    font-size: 18px;
-    color: var(--btn-color);
-    margin-bottom: 0;
+    font-family: var(--titleReciepe-font);
+    font-size: 17px;
+    margin-bottom: 2px;
+    color: var(--btn-color) !important;
 }
 
 .main-btn.recipe{
