--- a/front/src/app/component/public-profile/public-profile.component.html
+++ b/front/src/app/component/public-profile/public-profile.component.html
@@ -1,7 +1,7 @@
 <section class="container">
     <section class="publicProfile-details  my-5">
         <h1 class="fw-bold text-capitalize title"><img src="assets/img/chef.png" alt="chef" class="chef">{{ publicProfile?.name }}</h1>
-        <div class="d-flex "  *ngIf="publicProfile.youtube_link || publicProfile.instagram_link || publicProfile.tiktok_link">
+        <div class="d-flex" *ngIf="publicProfile.youtube_link || publicProfile.instagram_link || publicProfile.tiktok_link">
             <div class="title px-3 me-5">
                 <p class="fw-bold text-capitalize fs-4 mb-0"><img src="assets/img/link.png" alt="link" class="link-img">Links</p>
               </div>
@@ -16,6 +16,7 @@
             </div>
           </div>
     </section>
+
       <section class="recipes-wrapper my-5" >
         <div class="title d-flex justify-content-between align-items-center">
           <h1 class="fw-bold text-capitalize"><img src="assets/img/recipe.png" alt="recipe" class="chef">Other Recipes of this User</h1>
@@ -35,7 +36,7 @@
                     style="height: 330px"
                   />
                 </div>
-                <div class="card-body">
+                <div class="card-body px-0">
                   <div class="category-time d-flex align-items-baseline justify-content-between">
                     <span class="h6 related-recipe-category">{{ recipe?.category.name }}</span>
                     <div class="time">
