--- a/front/src/app/component/public-profile/public-profile.component.css
+++ b/front/src/app/component/public-profile/public-profile.component.css
@@ -1,7 +1,4 @@
-.link-img{
-    width: 30px;
-    padding-right: 10px;
-}
+
 .title{
     color: var(--main-color);
 }
@@ -23,4 +20,20 @@
 
 .related-recipes .time {
     color: var(--main-color);
+}
+
+
+/* Links */
+.links{
+    color: rgb(109 118 126);
+    text-decoration: none;
+    font-weight: 500;
+}
+.links:hover{
+    color: var(--btn-color);
+    text-decoration: underline;
+}
+.link-img{
+    width: 40px;
+    padding-right: 10px;
 }
