Add top dish area in add recipe and admin add recipe

--- a/front/src/app/component/about/about.component.html
+++ b/front/src/app/component/about/about.component.html
@@ -1,6 +1,6 @@
-<h1 class="text-center mt-5">
-  Welcome to My Daily Recipes, where culinary creativity meets simplicity!
-</h1>
+
+<app-top-dish-area title="Welcome to My Daily Recipes!!"></app-top-dish-area>
+
 <section class="container mt-5 mb-5 px-5">
   <!-- Overview section with a dynamic border color depending on dark mode -->
   <div style="background-color: var(--main-color)" class="text-light p-4 overview-section">
