--- a/front/src/app/component/profile/add-recipe/add-recipe.component.css
+++ b/front/src/app/component/profile/add-recipe/add-recipe.component.css
@@ -19,3 +19,8 @@ form button:hover{
 form .text-danger {
   color: var(--btn-color) !important;
 }
+
+/*  */
+body #topDishArea{
+  padding: 90px 0 !important;
+}
