--- a/front/src/app/component/admin/admin-edit-user/admin-edit-user.component.css
+++ b/front/src/app/component/admin/admin-edit-user/admin-edit-user.component.css
@@ -22,6 +22,15 @@
     margin: 0;
   }
 
+.main p,.main i{
+  transition: all 0.3s;
+}
+.main:hover i{
+  transform: translateX(5px);
+}
+.main:hover p{
+  transform: translateX(-5px);
+}
   @media (max-width: 768px) {
     
     .main {
