--- a/front/src/app/component/admin/admin-edit-user/admin-edit-user.component.html
+++ b/front/src/app/component/admin/admin-edit-user/admin-edit-user.component.html
@@ -1,4 +1,4 @@
-<div class="container d-flex justify-content-center">
+<div class="container d-flex justify-content-center p-5">
     <div class="w-100 p-3">
       <div class="main">
         <h1 class="fw-bold mb-4">User Edit Form</h1>
