--- a/front/src/app/component/profile/profile.component.html
+++ b/front/src/app/component/profile/profile.component.html
@@ -24,7 +24,7 @@
       <div *ngIf="user.instagram_link" class="me-4 shadow-sm p-3 rounded">
         <a [href]="user.instagram_link" class="links"><img src="assets/img/instagram.png" alt="instagram" class="link-img">Instagram Link</a>
       </div>
-      <div *ngIf="user.tiktok_link" class="me-4 shadow-sm p-3 rounded">
+      <div *ngIf="user.tiktok_link" class="me- shadow-sm p-3 rounded">
         <a [href]="user.tiktok_link" class="links"><img src="assets/img/tiktok.png" alt="tiktok" class="link-img">TikTok Link</a>
       </div>
     </div>
