--- a/front/src/app/component/top-dish-area/top-dish-area.component.html
+++ b/front/src/app/component/top-dish-area/top-dish-area.component.html
@@ -1,6 +1,6 @@
 
 <!-- Top Dish Area Section -->
-<section class="top-dish-area" id="categories">
+<section class="top-dish-area" id="topDishArea">
     <div class="container">
         <div class="row">
             <div class="col-lg-12">
