adjusted profile styling and added some animation to icons, fixed styling bug in add recipes, changed navbar light icon

--- a/front/src/app/component/footer/footer.component.css
+++ b/front/src/app/component/footer/footer.component.css
@@ -13,7 +13,7 @@
     font-weight: 900;
     text-transform: uppercase;
     margin-bottom: 12px;
-    color: var(--footer-color);
+    color: var(--main-color);
 }
 
 .menu-column ul {
