--- a/front/src/app/component/profile/profile.component.css
+++ b/front/src/app/component/profile/profile.component.css
@@ -3,8 +3,18 @@
   color: var(--main-color);
 }
 
-.card-title{
-  color: #141414;
+.card-title {
+  font-size: 23px;
+  color: var(--main-color);
+  font-family: var(--main-font);
+}
+
+.related-recipe-category {
+  color: var(--btn-color) !important;
+}
+
+.time {
+  color: var(--main-color);
 }
 
 .btn {
@@ -12,10 +22,17 @@
 }
 
 .btn:hover {
-  background-color: #141414;
+  background-color: var(--btn-color);
+  border-color: var(--btn-color);
 }
 .fa-cog{
   cursor: pointer;
+  transition: .3s all ease;
+}
+
+.fa-cog:hover {
+  transform: rotate(180deg);
+  color: var(--btn-color);
 }
 
 .main-btn {
