--- a/front/src/app/component/profile/profile.component.html
+++ b/front/src/app/component/profile/profile.component.html
@@ -18,14 +18,14 @@
       </div>
     </div>
     <div class="d-flex ">
-      <div *ngIf="user.youtube_link" class="me-5 shadow-sm p-3 rounded">
-        <a [href]="user.youtube_link" class="links "><img src="assets/img/youtube.png" alt="youtube" class="link-img">Youtube Link</a>
+      <div *ngIf="user.youtube_link" class="me-4 shadow-sm p-3 rounded">
+        <a [href]="user.youtube_link" class="links "><img src="assets/img/youtube.png" alt="youtube" class="link-img">Youtube</a>
       </div>
-      <div *ngIf="user.instagram_link" class="me-5 shadow-sm p-3 rounded">
-        <a [href]="user.instagram_link" class="links "><img src="assets/img/instagram.png" alt="instagram" class="link-img">Instagram Link</a>
+      <div *ngIf="user.instagram_link" class="me-4 shadow-sm p-3 rounded">
+        <a [href]="user.instagram_link" class="links "><img src="assets/img/instagram.png" alt="instagram" class="link-img">Instagram</a>
       </div>
-      <div *ngIf="user.tiktok_link" class="me-5 shadow-sm p-3 rounded">
-        <a [href]="user.tiktok_link" class="links "><img src="assets/img/tiktok.png" alt="tiktok" class="link-img">TikTok Link</a>
+      <div *ngIf="user.tiktok_link" class="me-4 shadow-sm p-3 rounded">
+        <a [href]="user.tiktok_link" class="links "><img src="assets/img/tiktok.png" alt="tiktok" class="link-img">TikTok</a>
       </div>
     </div>
   </section>
@@ -48,8 +48,15 @@
             alt="Title"
             style="height: 330px;"
           />
-          <div class="card-body">
-            <h1 class="card-title h4">{{ recipe?.name }}</h1>
+          <div class="card-body px-0">
+            <div class="category-time d-flex align-items-baseline justify-content-between">
+              <span class="h6 related-recipe-category">{{ recipe?.category.name }}</span>
+              <div class="time">
+                <span class="h6 me-2"><i class="fa-regular fa-clock"></i></span>
+                <span class="h6">{{ recipe?.time }} mins</span>
+              </div>
+            </div>
+            <h4 class="card-title">{{ recipe?.name }}</h4>
           </div>
         </div>
       </div>
@@ -87,8 +94,15 @@
           <span class="text-center position-absolute top-0 end-0 m-2" *ngIf="recipe.status=='denied'" (click)="editPendingRecipe(recipe?.id)">
             <i class="fa-solid fa-pen-to-square" style="color: var(--main-color); font-size: 20px;" ></i>
           </span>
-          <div class="card-body">
-            <h1 class="card-title h4">{{ recipe?.name }}</h1>
+          <div class="card-body px-0">
+            <div class="category-time d-flex align-items-baseline justify-content-between">
+              <span class="h6 related-recipe-category">{{ recipe?.category.name }}</span>
+              <div class="time">
+                <span class="h6 me-2"><i class="fa-regular fa-clock"></i></span>
+                <span class="h6">{{ recipe?.time }} mins</span>
+              </div>
+            </div>
+            <h4 class="card-title">{{ recipe?.name }}</h4>
           </div>
         </div>
       </div>
@@ -124,8 +138,15 @@
             style="height: 330px;"
           />
           <span class="badge bg-success position-absolute top-0 start-0 m-2">Accepted</span>
-          <div class="card-body">
-            <h1 class="card-title h4">{{ recipe?.name }}</h1>
+          <div class="card-body px-0">
+            <div class="category-time d-flex align-items-baseline justify-content-between">
+              <span class="h6 related-recipe-category">{{ recipe?.category.name }}</span>
+              <div class="time">
+                <span class="h6 me-2"><i class="fa-regular fa-clock"></i></span>
+                <span class="h6">{{ recipe?.time }} mins</span>
+              </div>
+            </div>
+            <h4 class="card-title">{{ recipe?.name }}</h4>
           </div>
         </div>
       </div>
