--- a/front/src/app/component/single-recipe/single-recipe.component.html
+++ b/front/src/app/component/single-recipe/single-recipe.component.html
@@ -145,7 +145,7 @@
               style="height: 330px"
             />
           </div>
-          <div class="card-body">
+          <div class="card-body px-0">
             <div class="category-time d-flex align-items-baseline justify-content-between">
               <span class="h6 related-recipe-category">{{ recipe?.category.name }}</span>
               <div class="time">
