--- a/front/src/app/component/recipes/recipes.component.html
+++ b/front/src/app/component/recipes/recipes.component.html
@@ -106,11 +106,11 @@
         </div>
         <div class="d-flex justify-content-between mt-2">
           <span class="red m-0">{{item.category.name}}</span>
-          <div class="d-flex  flex-row align-items-center ">
+          <div class="d-flex  flex-row align-items-center " style=" color: var(--main-color);">
 
-            <i class="fa-regular fa-clock" style="font-size:20px;"></i>
+            <i class="fa-regular fa-clock h6" ></i>
 
-            <span class="inline-block px-2 m-0" style="color: #666;">{{item.time}} mins</span>
+            <span class="inline-block px-2 h6" >{{item.time}} mins</span>
           </div>
         </div>
         <div class="mb-3">
